force-app/main/default/objects/Body_Metric__c/Body_Metric__c.object-meta.xml
<CustomObject>
    <label>Body Metric</label>
    <nameField>
        <displayFormat>BM-{{0000}}</displayFormat>
        <label>Body Metric Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Body Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>