force-app/main/default/objects/Body_Metric__c/fields/Metric_Date__c.field-meta.xml
<CustomField>
    <fullName>Metric_Date__c</fullName>
    <description>Metric Date field for Fitness Tracker.</description>
    <label>Metric Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>