force-app/main/default/objects/Body_Metric__c/fields/Metric_Type__c.field-meta.xml
<CustomField>
    <fullName>Metric_Type__c</fullName>
    <description>Metric Type field for Fitness Tracker.</description>
    <label>Metric Type</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
    <value><fullName>Weight</fullName><default>true</default><label
        >Weight</label></value>
    <value><fullName>Waist</fullName><default>false</default><label
        >Waist</label></value>
    <value><fullName>BodyFat</fullName><default>false</default><label
        >BodyFat</label></value>
    <value><fullName>Steps</fullName><default>false</default><label
        >Steps</label></value>
    </valueSetDefinition></valueSet>
</CustomField>