force-app/main/default/objects/Body_Metric__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Source field for Fitness Tracker.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
    <value><fullName>Manual</fullName><default>true</default><label
        >Manual</label></value>
    <value><fullName>Trainer</fullName><default>false</default><label
        >Trainer</label></value>
    <value><fullName>Device</fullName><default>false</default><label
        >Device</label></value>
    </valueSetDefinition></valueSet>
</CustomField>