force-app/main/default/objects/Body_Metric__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>Unit field for Fitness Tracker.</description>
    <label>Unit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>