force-app/main/default/objects/Body_Metric__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Value field for Fitness Tracker.</description>
    <label>Value</label>
    <precision>8</precision>
    <scale>2</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>